--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
       - uses: shogo82148/actions-upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: /NodeJSBuild/ThaiFixed.*.zip
+          asset_path: /NodeJSBuild/**.zip
         
       #- name: Create Release
       #  id: create_release
